[gd_scene load_steps=9 format=2]

[ext_resource path="res://Character/Art/head.png" type="Texture" id=1]
[ext_resource path="res://UI/HealthBar/health_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UI.gd" type="Script" id=3]
[ext_resource path="res://UI/Art/villager_icon.png" type="Texture" id=4]
[ext_resource path="res://IndieFlower-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/Art/currency.png" type="Texture" id=6]
[ext_resource path="res://UI/Art/skelly.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 62.0
margin_bottom = 28.0
rect_scale = Vector2( 5, 5 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 12.0
margin_bottom = 18.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="HealthBar" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 16.0
margin_top = 0.0
margin_right = 32.0
margin_bottom = 18.0
rect_scale = Vector2( 1, 1 )
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.36035
margin_top = -74.4322
margin_right = 235.36
margin_bottom = 28.5678
rect_scale = Vector2( 0.8, 0.8 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer2"]
margin_right = 80.0
margin_bottom = 103.0
texture = ExtResource( 6 )

[node name="CurrencyLabel" type="Label" parent="HBoxContainer2"]
margin_left = 100.0
margin_right = 234.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "11000"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -167.991
margin_top = 2.72076
margin_right = 34.0093
margin_bottom = 212.721
grow_horizontal = 0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 202.0
margin_bottom = 103.0
custom_constants/separation = 20

[node name="Villager_Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 102.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "5/5"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 202.0
margin_bottom = 103.0
texture = ExtResource( 4 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -171.853
margin_top = -77.3539
margin_right = 30.1467
margin_bottom = 132.646
grow_horizontal = 0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 202.0
margin_bottom = 103.0
custom_constants/separation = 20

[node name="SkellyLabel" type="Label" parent="VBoxContainer2/HBoxContainer"]
margin_right = 102.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "5/5"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/HBoxContainer"]
margin_left = 122.0
margin_right = 202.0
margin_bottom = 103.0
texture = ExtResource( 7 )
stretch_mode = 4
